WIP Fix rootScroller URL bar adjustment under root-layer-scrolls

--------------------This line is 72 characters long---------------------
TODO: Description

Bug: 773362
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I547f344c15fc0c25c48161e8eee1e8440960edcc